--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -28,6 +28,7 @@
     "applicationType": "monolith",
     "testFrameworks": [],
     "jhiPrefix": "jhi",
-    "enableTranslation": false
+    "enableTranslation": false,
+    "herokuAppName": "shielded-tor-99241"
   }
 }
